tests/paczka1/fuzzy1/64627597.err
Error in line 10: A143 A779 13,3
Error in line 16: ZCNVo985T A158 68,8
Error in line 20: VTwsHn38S A638 38,1
Error in line 11: GwfXkJN A779 3,9
Error in line 24: A143 A158 27,8
Error in line 26: A143 A143 81,9
Error in line 32: BFV2N2fuQ A638 47,5
Error in line 38: bjpzUz6mJU A638 50,3
Error in line 35: BFV2N2fuQ A143 6,0
